--- a/sections/a-custom-section.liquid
+++ b/sections/a-custom-section.liquid
@@ -23,5 +23,11 @@
             "label": "Custom Section Writing"
         }
     ]
+  },
+  {
+    "presets": [
+        "category": "Custom Section",
+        "name": "Custom Section"
+    ]
   }
 {% endschema %}
