style tags modified

--- a/sections/a-custom-section.liquid
+++ b/sections/a-custom-section.liquid
@@ -14,13 +14,13 @@
     {{custom-section-text}}
 </div>
 
-{% stylesheet %}
+{% style %}
   .custom-section{
     background-image: url('{{bgImg}}'');
     background-size: cover;
     color: {{custom-section-txt-color}};
   }
-{% endstylesheet %}
+{% endstyle %}
 
 {% schema %}
   {
