--- a/sections/a-custom-section.liquid
+++ b/sections/a-custom-section.liquid
@@ -15,10 +15,10 @@
 </div>
 
 {% style %}
-  .custom-section{
-    background-image: url('{{bgImg}}'');
+  .custom-section {
+    background-image: url('{bgImg}'');
     background-size: cover;
-    color: {{custom-section-txt-color}};
+    color: {custom-section-txt-color};
   }
 {% endstyle %}
 
