--- a/sections/a-custom-section.liquid
+++ b/sections/a-custom-section.liquid
@@ -16,9 +16,9 @@
 
 {% style %}
   .custom-section {
-    background-image: url('{bgImg}'');
+    background-image: url('{{ bgImg }}'');
     background-size: cover;
-    color: {custom-section-txt-color};
+    color: {{ custom-section-txt-color }};
   }
 {% endstyle %}
 
