--- a/sections/a-custom-section.liquid
+++ b/sections/a-custom-section.liquid
@@ -1,5 +1,5 @@
 {% if section.settings.custom-section-img %}
-    {% capture bg-img %}
+    {% capture bgImg %}
         {{ section.settings.custom-section-img }}
     {% endcapture %}
 {% endif %}
